Added graphics system.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
-    <script src="libs/TANK/js/addProperty.js"></script>
-    <script src="libs/TANK/js/requestAnimFrame.js"></script>
-    <script src="libs/TANK/js/Math.js"></script>
-    <script src="libs/TANK/js/KeyCodes.js"></script>
-    <script src="libs/TANK/js/Component.js"></script>
-    <script src="libs/TANK/js/Entity.js"></script>
-    <script src="libs/TANK/js/Engine.js"></script>
-    <script src="libs/TANK/components/InputManager.js"></script>
+    <script src="lib/tankjs/js/addProperty.js"></script>
+    <script src="lib/tankjs/js/requestAnimFrame.js"></script>
+    <script src="lib/tankjs/js/Math.js"></script>
+    <script src="lib/tankjs/js/KeyCodes.js"></script>
+    <script src="lib/tankjs/js/Component.js"></script>
+    <script src="lib/tankjs/js/Entity.js"></script>
+    <script src="lib/tankjs/js/Engine.js"></script>
+    <script src="lib/tankjs/components/InputManager.js"></script>
 
-    <script src="libs/stats.min.js"></script>
-    <script src="libs/three.min.js"></script>
+    <script src="lib/stats.min.js"></script>
+    <script src="lib/three.min.js"></script>
 
     <script src="BoatGame.js"></script>
 
