--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
     <script src="BoatGame.js"></script>
 
   </head>
-  
+
   <style>
     body
     {
       margin: 0px;
       overflow: hidden;
+    }
+
+    canvas
+    {
+      width: 100%;
+      height: 100%;
     }
   </style>
 
@@ -28,5 +34,7 @@
     <script type="text/javascript">
     this.addEventListener("load", main);
     </script>
+
+    <canvas id="screen"></canvas>
   </body>
 </html>
