--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="lib/tankjs/js/KeyCodes.js"></script>
     <script src="lib/tankjs/js/Component.js"></script>
     <script src="lib/tankjs/js/Entity.js"></script>
+    <script src="lib/tankjs/js/Space.js"></script>
     <script src="lib/tankjs/js/Engine.js"></script>
     <script src="lib/tankjs/components/InputManager.js"></script>
 
