Added graphics to space.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="lib/stats.min.js"></script>
     <script src="lib/three.min.js"></script>
 
+    <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
 
   </head>
