--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="lib/three.min.js"></script>
 
     <script src="src/components/Box.js"></script>
+    <script src="src/components/Ocean.js"></script>
     <script src="src/components/Transform.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
