Put the model in the game.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
     <script src="lib/stats.min.js"></script>
     <script src="lib/three.min.js"></script>
 
+    <script src="src/utility/VoxelMeshBuilder.js"></script>
+    
+    <script src="src/components/Model.js"></script>
     <script src="src/components/Skybox.js"></script>
     <script src="src/components/Box.js"></script>
     <script src="src/components/Transform.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
+
+    <script src="res/js/Boat.js"></script>
 
   </head>
 
