Added controller skeleton and stats component.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
     <script src="src/utility/VoxelMeshBuilder.js"></script>
     
+    <script src="src/components/Controller.js"></script>
     <script src="src/components/Model.js"></script>
     <script src="src/components/Skybox.js"></script>
     <script src="src/components/Box.js"></script>
     <script src="src/components/Ocean.js"></script>
     <script src="src/components/Transform.js"></script>
+    <script src="src/systems/Stats.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
 
