Added an ambient float component to make the boat bob peacefully on the ocean.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="src/components/Skybox.js"></script>
     <script src="src/components/Box.js"></script>
     <script src="src/components/Transform.js"></script>
+    <script src="src/components/Float.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
 
