Added boat skeleton.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="src/utility/VoxelMeshBuilder.js"></script>
     
+    <script src="src/components/Boat.js"></script>
     <script src="src/components/Controller.js"></script>
     <script src="src/components/Model.js"></script>
     <script src="src/components/Skybox.js"></script>
