--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="src/components/Transform.js"></script>
     <script src="src/systems/Stats.js"></script>
     <script src="src/components/Float.js"></script>
+    <script src="src/components/Camera.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
 
