Added awesome ship model.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
 
+    <script src="res/js/PirateShip.js"></script>
     <script src="res/js/Boat.js"></script>
 
   </head>
