Added wandering and bounding boxes.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="src/utility/VoxelMeshBuilder.js"></script>
     
+    <script src="src/components/Wander.js"></script>
     <script src="src/components/Boat.js"></script>
     <script src="src/components/Controller.js"></script>
     <script src="src/components/Model.js"></script>
@@ -22,10 +23,12 @@
     <script src="src/components/Box.js"></script>
     <script src="src/components/Ocean.js"></script>
     <script src="src/components/Transform.js"></script>
-    <script src="src/systems/Stats.js"></script>
     <script src="src/components/Float.js"></script>
     <script src="src/components/Camera.js"></script>
+    <script src="src/systems/Stats.js"></script>
     <script src="src/systems/Graphics.js"></script>
+    <script src="src/systems/Gameplay.js"></script>
+    
     <script src="BoatGame.js"></script>
 
     <script src="res/js/PirateShip.js"></script>
