Added Archetype file for your quick object creation; Added cannonballs that shoot when a cannon component is attached.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <script src="src/utility/VoxelMeshBuilder.js"></script>
     
+    <script src="src/components/Archetype.js"></script>
     <script src="src/components/Boat.js"></script>
     <script src="src/components/Controller.js"></script>
     <script src="src/components/Model.js"></script>
@@ -24,6 +25,8 @@
     <script src="src/components/Transform.js"></script>
     <script src="src/systems/Stats.js"></script>
     <script src="src/components/Float.js"></script>
+    <script src="src/components/CannonBall.js"></script>
+    <script src="src/components/Cannon.js"></script>
     <script src="src/components/Camera.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="BoatGame.js"></script>
