--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <script src="lib/three.min.js"></script>
 
     <script src="src/utility/VoxelMeshBuilder.js"></script>
-    
+
     <script src="src/components/Wander.js"></script>
     <script src="src/components/Boat.js"></script>
     <script src="src/components/Controller.js"></script>
     <script src="src/components/Model.js"></script>
     <script src="src/components/Skybox.js"></script>
     <script src="src/components/Box.js"></script>
+    <script src="src/components/Light.js"></script>
     <script src="src/components/Ocean.js"></script>
     <script src="src/components/Transform.js"></script>
     <script src="src/systems/Stats.js"></script>
@@ -29,7 +30,7 @@
     <script src="src/components/BoatCameraController.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="src/systems/Gameplay.js"></script>
-    
+
     <script src="BoatGame.js"></script>
 
     <script src="res/js/PirateShip.js"></script>
