--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script src="src/components/Float.js"></script>
     <script src="src/components/Camera.js"></script>
     <script src="src/components/BoatCameraController.js"></script>
+    <script src="src/components/ParticleEmitter.js"></script>
+    <script src="src/components/ParticleForces.js"></script>
     <script src="src/systems/Graphics.js"></script>
     <script src="src/systems/Gameplay.js"></script>
     
