Added and tested hierarchies (works with particle systems).

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="src/components/CannonBall.js"></script>
     <script src="src/components/Cannon.js"></script>
     <script src="src/components/Camera.js"></script>
+    <script src="src/components/Hierarchy.js"></script>
     <script src="src/components/BoatCameraController.js"></script>
     <script src="src/components/ParticleEmitter.js"></script>
     <script src="src/components/ParticleForces.js"></script>
