--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="src/components/ParticleEmitter.js"></script>
     <script src="src/components/ParticleForces.js"></script>
     <script src="src/systems/Graphics.js"></script>
+    <script src="src/systems/Fog.js"></script>
     <script src="src/systems/Gameplay.js"></script>
 
     <script src="BoatGame.js"></script>
