Made an explosion for funzies. Added TimedDeath and OrientToVelocity components. Fixed destruction for ParticleEmitter, Transform, and Model.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <script src="src/components/Skybox.js"></script>
     <script src="src/components/ParticleGradient.js"></script>
     <script src="src/components/Transform.js"></script>
+    <script src="src/components/TimedDeath.js"></script>
+    <script src="src/components/OrientToVelocity.js"></script>
     <script src="src/systems/Fog.js"></script>
     <script src="src/components/Wander.js"></script>
     <script src="src/systems/Gameplay.js"></script>
