Processed Art; Enemy ship incorporated.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
     <script src="res/js/PirateShip.js"></script>
     <script src="res/js/Boat.js"></script>
+    <script src="res/js/Cannon.js"></script>
+    <script src="res/js/Character.js"></script>
+    <script src="res/js/Character2.js"></script>
+    <script src="res/js/EnemyShip.js"></script>
 
     <style>
       body
