Added fish, fixed projectile mistake

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="res/js/Character.js"></script>
     <script src="res/js/Character2.js"></script>
     <script src="res/js/EnemyShip.js"></script>
+    <script src="res/js/Fish1.js"></script>
 
     <style>
       body
