--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="lib/stats.min.js"></script>
     <script src="lib/three.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
 
     <script src="src/utility/Gradient.js"></script>
     <script src="src/components/Archetype.js"></script>
@@ -51,19 +52,7 @@
     <script src="res/js/Character2.js"></script>
     <script src="res/js/EnemyShip.js"></script>
 
-    <style>
-      body
-      {
-        margin: 0px;
-        overflow: hidden;
-      }
-
-      canvas
-      {
-        width: 100%;
-        height: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
 
   </head>
 
