--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="src/components/Transform.js"></script>
     <script src="src/components/TimedDeath.js"></script>
     <script src="src/components/OrientToVelocity.js"></script>
+    <script src="src/components/Cube.js"></script>
     <script src="src/systems/Fog.js"></script>
     <script src="src/components/Wander.js"></script>
     <script src="src/systems/Gameplay.js"></script>
