--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script src="src/utility/Gradient.js"></script>
     <script src="src/components/Archetype.js"></script>
+    <script src="src/components/Bouyant.js"></script>
     <script src="src/components/Boat.js"></script>
     <script src="src/components/BoatCameraController.js"></script>
     <script src="src/components/Camera.js"></script>
@@ -45,6 +46,7 @@
 
     <script src="BoatGame.js"></script>
 
+    <script src="res/js/Crate.js"></script>
     <script src="res/js/PirateShip.js"></script>
     <script src="res/js/Boat.js"></script>
     <script src="res/js/Cannon.js"></script>
