Added header and footer.

--- a/index.html
+++ b/index.html
@@ -65,5 +65,16 @@
     <script type="text/javascript">
     this.addEventListener("load", this.main);
     </script>
+
+    
+    <div id="header">
+      "Downwind" was made in 48 hours for Molyjam 2013
+    </div>
+
+    <div id="footer">
+      [ Cassandra Sundberg, David Evans, Killian Koenig, Shilo Mulkin, Trevor Sundberg ]
+    </div>
+
+    <div id="fullscreen"/>
   </body>
 </html>
