Added ending when you press q.

--- a/index.html
+++ b/index.html
@@ -72,9 +72,17 @@
     </div>
 
     <div id="footer">
-      [ Cassandra Sundberg, David Evans, Killian Koenig, Shilo Mulkin, Trevor Sundberg ]
+      [ David Evans, Killian Koenig, Shilo Mulkin, Cassandra Sundberg, Trevor Sundberg ]
     </div>
 
-    <div id="fullscreen"/>
+    <div id="fullscreen"></div>
+
+    <div id="ending">
+      <div id="text">
+      If you really were free to do anything in the world, I think you'd end up being confused, and that's a very interesting point, a design point, actually.
+      <BR> - Peter Molyneux
+      <BR><BR> The End
+      </div>
+    </div>
   </body>
 </html>
