--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <script src="res/js/Crate.js"></script>
     <script src="res/js/PirateShip.js"></script>
+    <script src="res/js/Flag.js"></script>
     <script src="res/js/Boat.js"></script>
     <script src="res/js/Cannon.js"></script>
     <script src="res/js/Character.js"></script>
