--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="BoatGame.js"></script>
 
     <script src="res/js/Crate.js"></script>
+    <script src="res/js/CannonBall.js"></script>
     <script src="res/js/PirateShip.js"></script>
     <script src="res/js/Flag.js"></script>
     <script src="res/js/Boat.js"></script>
