Fishes could use help?

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="src/components/Cannon.js"></script>
     <script src="src/components/CannonBall.js"></script>
     <script src="src/components/Controller.js"></script>
+    <script src="src/components/Fish.js"></script>
     <script src="src/components/Light.js"></script>
     <script src="src/components/Model.js"></script>
     <script src="src/components/ModelCollider.js"></script>
