Add GameMix code

--- a/index.html
+++ b/index.html
@@ -69,9 +69,12 @@
     this.addEventListener("load", this.main);
     </script>
 
-    
+
     <div id="header">
       "Downwind" was made in 48 hours for Molyjam 2013
+      <div id="gamemix">
+        <script type="text/javascript" src="http://bx.gamemix.com/promote?action=embed&partnerId=6788269&siteId=6833221"></script>
+      </div>
     </div>
 
     <div id="footer">
@@ -90,5 +93,6 @@
 
     <div id="splashtext">
     </div>
+
   </body>
 </html>
