Fix for clickable gamemix banner

--- a/index.html
+++ b/index.html
@@ -69,12 +69,11 @@
     this.addEventListener("load", this.main);
     </script>
 
-
     <div id="header">
-      "Downwind" was made in 48 hours for Molyjam 2013
-      <div id="gamemix">
+      <div id="gamemix" style="z-index: 1000;">
         <script type="text/javascript" src="http://bx.gamemix.com/promote?action=embed&partnerId=6788269&siteId=6833221"></script>
       </div>
+      "Downwind" was made in 48 hours for Molyjam 2013
     </div>
 
     <div id="footer">
